Specify API endpoint for getting label set for corpus object
